RESOLVED FIXED226625
[iOS] Long pressing images on 9gag.com fails to present context menus
https://bugs.webkit.org/show_bug.cgi?id=226625
Summary [iOS] Long pressing images on 9gag.com fails to present context menus
Wenson Hsieh
Reported 2021-06-03 22:04:06 PDT
Attachments
For EWS (14.49 KB, patch)
2021-06-03 22:37 PDT, Wenson Hsieh
no flags
Wenson Hsieh
Comment 1 2021-06-03 22:37:53 PDT
Megan Gardner
Comment 2 2021-06-04 08:07:44 PDT
Comment on attachment 430541 [details] For EWS View in context: https://bugs.webkit.org/attachment.cgi?id=430541&action=review > Source/WebKit/UIProcess/ios/WKContentViewInteraction.mm:10386 > + })(); I'm unsure why this is a block instead of just a pre-calculated bool. I'm guessing that it's because you can more easily write the logic?
Wenson Hsieh
Comment 3 2021-06-04 08:13:51 PDT
Comment on attachment 430541 [details] For EWS View in context: https://bugs.webkit.org/attachment.cgi?id=430541&action=review Thanks for the review! >> Source/WebKit/UIProcess/ios/WKContentViewInteraction.mm:10386 >> + })(); > > I'm unsure why this is a block instead of just a pre-calculated bool. I'm guessing that it's because you can more easily write the logic? Indeed — I turned this into a block so that I could use early returns for each of the cases where we can show a preview (I feel that it's *slightly* cleaner than having it all on one line)
EWS
Comment 4 2021-06-04 08:32:29 PDT
Committed r278459 (238479@main): <https://commits.webkit.org/238479@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 430541 [details].
Note You need to log in before you can comment on or make changes to this bug.